feat: add footer and product components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-header></app-header>
+<header class="container mx-auto pt-5 pb-5 pl-2 pr-2">
+  <app-header></app-header>
+</header>
+<main class="scroll-smooth container mx-auto mt-px-65 pl-2 pr-2">
+  <app-main></app-main>
+</main>
+<footer class="footer container mx-auto text-center pl-2 pr-2">
+  <app-footer></app-footer>
+</footer>
