--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,5 @@
-<header class="fixed z-50 container mx-auto">
-  <h1 class="font-medium p-5 text-rose-600">{{ logo | uppercase }}</h1>
-</header>
+<h1
+  class="font-medium text-rose-600 cursor-pointer duration-300 hover:text-rose-700"
+>
+  {{ logo | uppercase }}
+</h1>
