feat: add products service request

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
 <main class="scroll-smooth container mx-auto mt-px-65 pl-2 pr-2">
   <app-main></app-main>
 </main>
-<footer class="footer container mx-auto text-center pl-2 pr-2">
+<footer class="footer container mx-auto text-center pl-2 pr-2 my-5">
   <app-footer></app-footer>
 </footer>
