--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,1 @@
-<app-product *ngFor="let prod of products" [product]="prod"></app-product>
+<app-products class="grid grid-cols-3 gap-4"></app-products>
