feat: add error handler service component

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,6 +1,7 @@
 <p *ngIf="loading" class="text-center text-lg col-span-3 my-5 text-yellow-600">
   Loading...
 </p>
+<app-global-error class="col-span-3"></app-global-error>
 <app-product
   *ngFor="let prod of products$ | async"
   [product]="prod"
